[gd_scene load_steps=9 format=3 uid="uid://cur7qfuj38uaf"]

[ext_resource type="Script" path="res://scripts/central_explosion.gd" id="1_utjmr"]
[ext_resource type="Texture2D" uid="uid://ca5wwnvqtts7f" path="res://asserts/Sprites.png" id="2_b3t6g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3e8db"]
atlas = ExtResource("2_b3t6g")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksige"]
atlas = ExtResource("2_b3t6g")
region = Rect2(112, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a783"]
atlas = ExtResource("2_b3t6g")
region = Rect2(32, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3jmg"]
atlas = ExtResource("2_b3t6g")
region = Rect2(112, 176, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_74378"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e8db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksige")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a783")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3jmg")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ctbot"]
size = Vector2(16, 16)

[node name="CentralExplosion" type="Area2D"]
collision_layer = 16
collision_mask = 63
script = ExtResource("1_utjmr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_74378")
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ctbot")

[node name="Raycast" type="Node2D" parent="."]

[node name="Up" type="RayCast2D" parent="Raycast"]
target_position = Vector2(0, -16)
collision_mask = 6
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="Raycast"]
target_position = Vector2(16, 0)
collision_mask = 6
collide_with_areas = true

[node name="Down" type="RayCast2D" parent="Raycast"]
target_position = Vector2(0, 16)
collision_mask = 6
collide_with_areas = true

[node name="Left" type="RayCast2D" parent="Raycast"]
target_position = Vector2(-16, 0)
collision_mask = 6
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
